# alphapepttools

./: .bumpversion.toml  .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  alphatools_env.yaml  pyproject.toml
.github/: code_review.yml  release.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  check-pre-commit.yaml  code-review.yml  create_release.yml  docs.yaml  publish_on_pypi.yml  release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  tutorials.md
docs/_example_data/pg_tables/alphadia/: pg.matrix.tsv
docs/_example_data/pg_tables/diann/: pg.matrix_top100.tsv
docs/_example_data/psm_tables/alphadia/: log.txt
docs/_example_data/psm_tables/diann/: report.log.txt  top20_report.parquet
docs/_example_data/psm_tables/spectronaut/: example_dataset_mouse_sn_top20peptides.tsv
docs/extensions/: typed_returns.py
docs/notebooks/: 00_basic_workflow.ipynb  00_data_sources.ipynb  01_basic_data_handling.ipynb  01_basic_workflow.ipynb  01_data_loading.ipynb  01_plotting.ipynb  02_basic_analysis.ipynb  02_plotting.ipynb  03_basic_workflow.ipynb  03b_basic_workflow.ipynb  04_basic_PCA_workflow.ipynb  04_differential_expression.ipynb  05_pycombat.ipynb  A01_load_psm_tables.ipynb  A01_plotting.ipynb  A02_filtering_demo.ipynb  data_handler.py  example.ipynb  t01_basic_proteomics_workflow.ipynb
docs/notebooks/bader2020_alphadia_pg/: pg.matrix_top100.tsv
docs/notebooks/example_data/: HeLa_QC_feature_metadata.csv  HeLa_QC_feature_metadata.pkl
notebooks/: 01_basic_data_handling.ipynb  01_data_loading.ipynb  02_plotting.ipynb  03_basic_workflow.ipynb  03b_basic_workflow.ipynb  A01_load_psm_tables.ipynb  A01_plotting.ipynb  XX_scrambled_example_data.ipynb  data_handler.py  debug.ipynb  tutorial_anndata.ipynb
notebooks/example_data/: HeLa_QC_data.pkl  HeLa_QC_sample_metadata.csv  HeLa_QC_sample_metadata.pkl
src/alphapepttools/: __init__.py
src/alphapepttools/data/: datasets.py
src/alphapepttools/io/: __init__.py  anndata_factory.py  pg_reader.py  psm_reader.py  reader_columns.py  utils.py
src/alphapepttools/metrics/: __init__.py  _principal_component_regression.py
src/alphapepttools/pl/: __init__.py  colors.py  defaults.py  figure.py  plot_data_handling.py  plots.py
src/alphapepttools/pp/: __init__.py  batch_correction.py  norm.py  transform.py
src/alphapepttools/tl/: __init__.py  stats.py  tools.py  utils.py
src/alphapepttools/tl/diff_exp/: alphaquant.py  ebayes.py  ttest.py
src/alphatools/: __init__.py
src/alphatools/data/: __init__.py  datasets.py  datasets.yaml
src/alphatools/io/: __init__.py  anndata_factory.py  pg_reader.py  protein_group_reader.py  psm_reader.py  reader_columns.py
src/alphatools/metrics/: __init__.py  _pmad.py  _principal_component_regression.py
src/alphatools/pl/: __init__.py  at_colors.py  at_figure.py  at_plots.py  basic.py  colors.py  defaults.py  figure.py  plot_config.yaml  plot_data_handling.py  plots.py  utils.py
src/alphatools/pp/: __init__.py  basic.py  batch_correction.py  data.py  embeddings.py  impute.py  metadata.py  norm.py  transform.py  utils.py
src/alphatools/tl/: __init__.py  basic.py  defaults.py  embeddings.py  stats.py  tools.py  utils.py
src/alphatools/tl/diff_exp/: __init__.py  alphaquant.py  call_limma.R  ebayes.py  limma_interface.py  ttest.py
tests/: .coverage  run_notebook_tests.sh  test_basic.py  test_pp_data.py
tests/data/: test_datasets.py
tests/docs/: test_docs.py
tests/integration/: test_anndata.py  test_pg_reader.py  test_protein_group.py
tests/integration/reference_data/: alphadia_1.10.4___pg_matrix.tsv  reference_ad_alphadia_181.parquet  reference_ad_alphapept_0.5.0__pg.parquet  reference_ad_diann_181.parquet  reference_ad_diann_190.parquet  reference_ad_var_alphapept_0.5.0__pg.parquet
tests/io/: test_anndata_factory.py  test_pg_reader.py  test_protein_group_reader.py  test_psm_reader.py  test_utils.py
tests/metrics/: test_pcr.py  test_pooled_median_absolute_deviation.py  test_principal_component_regression.py
tests/pl/: nb_test_plots.ipynb  test_colors.py  test_data_handling.py  test_plots.py
tests/pp/: test_batch_correction.py  test_data.py  test_embeddings.py  test_embiddings.py  test_impute.py  test_norm.py  test_transform.py
tests/tl/: test_diff_exp.py  test_embeddings.py  test_stats.py  test_tools.py  tl_test_data.ipynb
tests/tl/tl_test_data/: alphaquant_peptide_diffexp.pkl  alphaquant_protein_diffexp.pkl  alphaquant_proteoform_diffexp.pkl
