[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "alphatools"
version = "0.0.1"
description = "Search- and quantification-engine agnostic biological interpretation of proteomics data"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "MannLabs", email = "brennsteiner@biochem.mpg.de" },
]
authors = [
  { name = "MannLabs" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "anndata==0.11.1",
  "matplotlib==3.10",
  "numpy<2",
  "pandas",              # version to be fixed: 2.2.3
  "pyarrow",             # version to be fixed: 19.0.1
  "scikit-learn==1.5.1",
  # for debug logging (referenced from the issue template)
  "session-info==1",
]
optional-dependencies.dev = [
  "pre-commit",
  "twine>=4.0.2",
]
# TODO: decouple dependencies required for plotting from the core functionality
optional-dependencies.doc = [
  # Until pybtex >0.23.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "cmcrameri==1.9",
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "setuptools",
  "sphinx>=4",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://alphatools.readthedocs.io/"
urls.Homepage = "https://github.com/MannLabs/alphatools"
urls.Source = "https://github.com/MannLabs/alphatools"

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.docs]
features = [ "doc" ]
scripts.build = "sphinx-build -M html docs docs/_build {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

[tool.hatch.envs.hatch-test]
features = [ "test" ]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]

format.docstring-code-format = true

lint.select = [
  "ALL",
]

### STOP: Before adding rules to ignore here, consider disabling them on a per-file or per-line basis!
lint.ignore = [
  "ANN002", # Missing type annotation for `*args`
  "ANN003", # Missing type annotation for `**kwargs
  "ANN204", # Missing return type annotation for special method `__init__`
  "ARG001", # TODO: remove soon
  "ARG002", # TODO: remove soon
  "B008",   # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "B023",   # Function definition does not bind loop variable
  "B028",   #  No explicit `stacklevel` keyword argument found (for warnings)
  "COM812", #may cause conflicts when used with the formatter
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D105",   # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107",   # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203",    # We don’t want a blank line before a class docstring
  "D211",    # no-blank-line-before-class
  "D213",    # <> We want docstrings to start immediately after the opening triple quote
  "D400",    # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401",    # First line should be in imperative mood; try rephrasing
  "E501",    # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731",    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741",    # allow I, O, l as variable names -> I is the identity matrix
  "EM101",   # Exception must not use a string literal, assign to variable first
  "EM102",   # Logging statement uses f-string
  "ERA001",  # Found commented-out code
  "FA102",   # Missing `from __future__ import annotations
  "FIX002",  # things around TO-DO
  "G004",
  "INP001",  # implicit namespace package.
  "ISC001",  #may cause conflicts when used with the formatter
  "N806",    # Variable X in uppercase is commonplace in AnnData and should be allowed
  "NPY002",  # Replace legacy `np.random.normal` # TODO: remove soon
  "PD901",   # Avoid using the generic variable name `df` for DataFrames
  "PLR0913", # Plotting functions for a backend may have many arguments, prioritize sensible defaults
  "S301",    # Allow pickled data in modules
  "T201",    # use of 'print' detected  # TODO remove soon
  "TC002",
  "TC003",   # Move standard library import into a type-checking block
  "TD002",
  "TD003",
  "TRY003",  # Avoid specifying long messages outside the exception class
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [
  "I",
  "SLF001", # Private member accessed
]
lint.per-file-ignores."tests/*" = [
  "ANN",
  "ARG001", # TODO: remove soon
  "ARG002", # TODO: remove soon
  "D",
  "PT011",  #pytest.raises(ValueError) is too broad
  "S101",   # use of "assert" detected
  "SLF001", # Private member accessed

]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage.run]
source = [ "alphatools" ]
omit = [
  "**/test_*.py",
]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
